correction model schema

--- a/templates/adminpannel/ordersummery/accepted.html
+++ b/templates/adminpannel/ordersummery/accepted.html
@@ -119,7 +119,7 @@
                     </div>
                     <hr>
                     <div class="row">
-                        {% for p in b.booking_product.all %}
+                        {% for p in b.booking_prod_det.all %}
                         <div class="col-md-6">
                             <div class="d-flex">
                                 <div>
