--- a/templates/profile/order.html
+++ b/templates/profile/order.html
@@ -60,7 +60,7 @@
         
                                                 </div>
                                                 <hr>
-                                                {% for c in p.booking_product.all %}
+                                                {% for c in p.booking_prod_det.all %}
                                                 <div class="col-md-6">
                                                     <div class="d-flex">
                                                         <div>
