cart page correction

--- a/templates/adminpannel/pages/addsubcategory.html
+++ b/templates/adminpannel/pages/addsubcategory.html
@@ -219,7 +219,7 @@
                                 </div>
                                 <div class="my-2">
                                     <label for="">No of Slot</label>
-                                    <input type="text" class="form-control" name="slot" value="{{sc.no_of_slot}}">
+                                    <input type="text" class="form-control" name="slot" value="{{sc.no_of_slot}}" required>
                                 </div>
                                 <div class="d-flex justify-content-center my-2">
 
