--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 
 {% block body %}
-<div class="container mt-5" >
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-12">
             <div class="my-5 mt-5">
@@ -10,7 +10,7 @@
         </div>
     </div>
 </div>
-<div class="container" >
+<div class="container">
     <div class="details-projectt mb-5">
         <div class="row">
             {% for p in product_in_cart %}
@@ -36,24 +36,7 @@
                                             <button type="submit" class="btn btn-warning mt-2">Update Cart</button>
                                         </div>
                                     </div>
-                                    {% if user.is_authenticated %}
-                                    <div class="">
-                                        <div class="text-center">
-                                            <a href="{% url 'checkout' %}?uid={{p.uid}}&quantity={{p.quantity}}">
-                                                <button type="button" class="button-12 mt-2">Checkout</button>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    {% else %}
-                                    <div class="">
-                                        <div class="text-center">
-                                            <a href="#" data-bs-toggle="modal"
-                                            data-bs-target="#staticBackdrop">
-                                                <button type="button" class="button-12 mt-2">Checkout</button>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    {% endif %}
+
                                 </form>
                             </div>
                             <div class="flex-grow-1 px-2">
@@ -74,12 +57,29 @@
                         </div>
                     </div>
 
-                    <div><a href="{% url 'deletesessioncart' p.uid %}" class="btn btn-danger position-absolute top-0" style="right: 0;"><b>X</b></a></div>
+                    <div><a href="{% url 'deletesessioncart' p.uid %}" class="btn btn-danger position-absolute top-0"
+                            style="right: 0;"><b>X</b></a></div>
                 </div>
             </div>
             {% empty %}
             <h3>No Service Added</h3>
             {% endfor %}
+            <div class="text-center">
+                {% if user.is_authenticated %}
+                    <div class="text-center">
+                        <a href="{% url 'checkout' %}">
+                            <button type="button" class="button-12 mt-2">Checkout</button>
+                        </a>
+                    </div>
+                {% else %}
+                    <div class="text-center">
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                            <button type="button" class="button-12 mt-2">Checkout</button>
+                        </a>
+                    </div>   
+                {% endif %}
+            </div>
+
         </div>
     </div>
 </div>
