--- a/templates/adminpannel/sidebar.html
+++ b/templates/adminpannel/sidebar.html
@@ -6,7 +6,6 @@
                         class="nav-text">Dashboard</span></a>
             </li>
 
-
             <li class="nav-label">Manage Order</li>
             <li><a href="/accounts/pending" class="sPen"><i class="mdi mdi-clock"></i> <span class="nav-text">Pending</span></a></li>
             <li><a href="/accounts/assignwork" class="sPen"><i class="mdi mdi-clock"></i> <span class="nav-text">Assigned Work</span></a></li>
@@ -17,7 +16,9 @@
             </li>
         
             <li><a href="/accounts/client-cancel" class="sCan"><i class="mdi mdi-close-box"></i> <span class="nav-text">Canceled</span></a></li>
+            <li><a href="/accounts/allbooking" class="sPen"><i class="mdi mdi-package-variant"></i> <span class="nav-text">All Booking</span></a></li>
 
+            {% if user.is_superuser == True %}
             <li class="nav-label">Manage Products</li>
             <li><a href="/accounts/addcategory" class="sAdc"><i class="mdi mdi-border-all"></i> <span class="nav-text">Add
                         Category</span></a></li>
@@ -34,6 +35,7 @@
             <li><a href="/accounts/managepage" class="shome"><i class="mdi mdi-home"></i> <span class="nav-text">Add Service (Extra)</span></a>
             </li>
             <!-- <li><a href="/accounts/addgallery"><i class="mdi mdi-image-filter"></i> <span class="nav-text">Add Gallery Images</span></a></li> -->
+            
 
             <li class="nav-label">Staff Details</li>
             <!-- <li><a href="/accounts/add-staff" class="sUser"><i class="mdi mdi-account-group"></i> <span
@@ -42,6 +44,8 @@
                     class="nav-text">New Account Request</span></a></li>
             <li><a href="/accounts/managestaff" class="sUser"><i class="mdi mdi-account-group"></i> <span
                         class="nav-text">Manage Staff</span></a></li>
+            <li><a href="/accounts/managesubadmin" class="sUser"><i class="mdi mdi-account-group"></i> <span
+                            class="nav-text">Manage Sub Admin</span></a></li>
 
             <li class="nav-label">Client Details</li>
             <li><a href="/accounts/userdetails" class="sUser"><i class="mdi mdi-account-group"></i> <span
@@ -51,6 +55,8 @@
             <!-- <li><a href="/accounts/subscriptions"><i class="mdi mdi-account-heart"></i> <span class="nav-text">Subscriptions</span></a></li> -->
             <li><a href="/accounts/contactform" class="sOnta"><i class="mdi mdi-account-heart"></i> <span class="nav-text">Contact
                         Form</span></a></li>
+
+            {% endif %}
         </ul>
     </div>
     <!-- #/ nk nav scroll -->
