--- a/templates/adminpannel/ordersummery/pending.html
+++ b/templates/adminpannel/ordersummery/pending.html
@@ -14,7 +14,11 @@
             <div class="row">
                 {% include 'base/alerts.html' %}
                 <div class="col-lg-12 col-xl-12">
+
                     <div class="card">
+                        <button type="button" style="width: 150px;" class="btn btn-primary mt-2" data-toggle="modal" data-target="#exampleModal">
+                            Add Booking
+                        </button>
                         <div class="card-body">
                             <div class="active-member">
                                 <div class="table-responsive">
@@ -71,6 +75,31 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade mt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Add User Number</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="{% url 'checkusernumber' %}" method="post">
+                        {% csrf_token %}
+                        <div class="d-flex">
+                            <input type="number" name="phone_number" class="form-control" required>
+                        <button class="btn btn-success">Next</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     {% for b in booking %}
     <!-- Modal -->
