staff cancel history show

--- a/templates/adminpannel/ordersummery/staff-cancel.html
+++ b/templates/adminpannel/ordersummery/staff-cancel.html
@@ -155,7 +155,7 @@
                             <div class=" px-3">
                                 <hr>
                                 <div class=" py-1">
-                                    Staff  : {{bh.staff_status.full_name}} <br> Mobile No : {{bh.staff_status.phone_number}}
+                                    Staff  : {{bh.assignto.full_name}} <br> Mobile No : {{bh.assignto.phone_number}}
                                 </div>
                                 <div>
                                     Status : {{bh.staff_status}}
