staff service area bug fixed

--- a/templates/adminpannel/pages/managesubadmin.html
+++ b/templates/adminpannel/pages/managesubadmin.html
@@ -76,11 +76,10 @@
                                                         data-target="#{{u.id}}Modal">
                                                         Add Address
                                                     </button>
-                                                    <a href="" class="btn btn-danger px-2"><b>X</b></a>
+                                                    <!-- <a href="" class="btn btn-danger px-2"><b>X</b></a> -->
                                                 </td>
                                             </tr>
                                             {% endfor %}
-
                                         </tbody>
                                     </table>
                                 </div>
