--- a/templates/adminpannel/ordersummery/assignwork.html
+++ b/templates/adminpannel/ordersummery/assignwork.html
@@ -115,7 +115,7 @@
                         </div>
                         <div>
                             <span>
-                                <a href="{% url 'add-staff' b.assign_work.id %}">Staff Name : {{b.assign_work.full_name}} Mobile : {{b.assign_work.phone_number}}</a>
+                                <a href="{% url 'add_staff' b.assign_work.id %}" target="_blank">Staff Name : {{b.assign_work.full_name}} Mobile : {{b.assign_work.phone_number}}</a>
                             </span>
                         </div>
                         <div class="col-md-12">
