--- a/templates/adminpannel/ordersummery/assignwork.html
+++ b/templates/adminpannel/ordersummery/assignwork.html
@@ -113,9 +113,9 @@
                             <div>Email : {{b.email}}</div>
 
                         </div>
-                        <div>
+                        <div class="col-md-6">
                             <span>
-                                <a href="{% url 'add_staff' b.assign_work.id %}" target="_blank">Staff Name : {{b.assign_work.full_name}} Mobile : {{b.assign_work.phone_number}}</a>
+                                <a style="text-decoration: none;color: black;font-weight: bold;" href="{% url 'add_staff' b.assign_work.id %}" target="_blank">Staff Name : {{b.assign_work.full_name}} Mobile : {{b.assign_work.phone_number}}</a>
                             </span>
                         </div>
                         <div class="col-md-12">
