--- a/templates/adminpannel/ordersummery/completed.html
+++ b/templates/adminpannel/ordersummery/completed.html
@@ -112,6 +112,11 @@
 
                         </div>
                         <div class="col-md-12">
+                            <span>
+                                <a style="text-decoration: none;color: black;font-weight: bold;" href="{% url 'add_staff' b.assign_work.id %}" target="_blank">Staff Name : {{b.assign_work.full_name}} Mobile : {{b.assign_work.phone_number}}</a>
+                            </span>
+                        </div>
+                        <div class="col-md-12">
                             Notes : {{b.notes}}
                         </div>
                     </div>
